@@ -38,7 +38,7 @@ void  Tsuki :: Nick:: Parse()
         _data[0] != '+' && _data[0] != '@' && _data[0] != ':' && _data[0] != '[' && _data[0] != ']' &&
         _data[0] != static_cast<char>(39) && _data[0] != '{' && _data[0] != '}' && _data[0] != '<' && 
         _data[0] != '>' && _data[0] != '^' && _data[0] != '&' && _data[0] != '*' && _data[0] != '$'
-        && _data[0] != static_cast<char>(96) && _data[0] != '|' )
+        && _data[0] != static_cast<char>(96) && _data[0] != '|' && _data[0] != '\\' && _data[0] != '/' )
      {
 		 std::cout<<_data<<std::endl;
         throw std::runtime_error{"ZenIRC Error: First character of a nick can't be non-alpha."};
@@ -48,7 +48,14 @@ void  Tsuki :: Nick:: Parse()
         i = std::distance(_data.begin(),iter);
         if(_data[i] == static_cast<char>(95)  || ((bool) std::isalnum(_data[i]) == true )  ||  
           ((bool) std::isdigit(_data[i]) == true ))
-           continue;		
+           continue;
+        else if(static_cast<bool>(std::isalpha(_data[i])) == true || _data[i] == static_cast<char>(95) ||
+               _data[i] == static_cast<char>(95) || _data[i] == static_cast<char>(39) || _data[i] == static_cast<char>(96) ||
+               _data[i] == '+' || _data[i] == '@' || _data[i] == ':' || _data[i] == '[' || _data[i] == ']' ||
+               _data[i] == '{' || _data[i] == '}' || _data[i] == '<' || _data[i] == '_' || _data[i] == '-' ||
+               _data[i] == '>' || _data[i] == '^' || _data[i] == '&' || _data[i] == '*' || _data[i] == '$' || 
+               _data[i] == '|' || _data[i] == '\\' || _data[i] == '/' ) 
+           continue;  		
         else if(_data[i] == Tsuki::Dash || _data[i] == Tsuki::LeftSquareBrackets ||  
                 _data[i] == Tsuki::RightSquareBrackets || _data[i] == Tsuki::LeftSlash || 
                 _data[i] == Tsuki::SingleQuote || _data[i] == Tsuki::Power || 
@@ -85,25 +92,20 @@ void Tsuki :: Channel :: GetUsers(std::string& list)
    
 void Tsuki :: Channel  :: Parse()
 {
-	bool first_is_space = false;
    int i = 0;
    if(_data[0] != '#' && _data[0] != '&' )
    {  
-	  if(_data[0] == ' ' || _data.size() == 0 ) { first_is_space = true; }
-	  else    
-      { throw std::runtime_error{"ZenIRC Error: First character of a channel must be '#' or '&'. "}; }
+	  throw std::runtime_error{"ZenIRC Error: First character of a channel must be '#' or '&'. "}; 
    }     
    for(auto iter = _data.begin(); iter != _data.end(); iter++)
    {
       i = std::distance(_data.begin(),iter);
+      if(_data[i] == '-' || _data[i] == '_') continue;
       if(_data[i]  == Tsuki::Space || _data[i] == Tsuki::Null || 
          _data[i] == Tsuki::Lf || _data[i] == Tsuki::Cr || _data[i] == ',' )
-      { 		
-        if(first_is_space) {}
-        else
         throw  std::runtime_error{"ZenIRC Error: Can't have any space,comma,null character, carriage return or newline in Channel."};
-      }  
-   }
+    }  
+   
 }	
 
 void Tsuki :: User :: Parse()
